tests/bad/typing/005-case-returns-different-types.clap
val f = case { _ => 42 | _ => "42" }
